# advent-of-code

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CmakeLists.txt  LICENSE  Pipfile  README.md  requirements.txt  vcpkg.json
.github/: CODEOWNERS  (+1 more)
2021/01/aoc_2021_01/: CMakeLists.txt  PART1.md  PART2.md  main.cpp
puzzles/: CMakeLists.txt  README.md
puzzles/2021/: CMakeLists.txt
puzzles/2021/01/: CMakeLists.txt  main.cpp  solutions.cpp  solutions.hpp
puzzles/2021/01/aoc_2021_01/: CMakeLists.txt  README.md
puzzles/2021/01/sources/: CMakeLists.txt  main.cpp  solutions.cpp  solutions.hpp
puzzles/2021/01/tests/: CMakeLists.txt  unittests.cpp
puzzles/2021/02/: CMakeLists.txt  CmakeLists.txt
puzzles/2021/02/aoc_2021_02/: CmakeLists.txt
puzzles/2021/1/: CMakeLists.txt  README.md
puzzles/2021/1/sources/: CMakeLists.txt  main.cpp  solutions.cpp  solutions.hpp
puzzles/2021/1/tests/: CMakeLists.txt  unittests.cpp
puzzles/2021/10/: README.md
puzzles/2021/10/sources/: CMakeLists.txt  main.cpp  solutions.cpp  solutions.hpp
puzzles/2021/10/tests/: CMakeLists.txt  unittests.cpp
puzzles/2021/11/: README.md
puzzles/2021/11/sources/: CMakeLists.txt  main.cpp  solutions.cpp  solutions.hpp
puzzles/2021/12/: README.md
puzzles/2021/13/: README.md
puzzles/2021/14/: README.md
puzzles/2021/15/: README.md
puzzles/2021/16/: README.md
puzzles/2021/17/: README.md
puzzles/2021/18/: README.md
puzzles/2021/19/: README.md
puzzles/2021/2/: README.md
puzzles/2021/20/: README.md
puzzles/2021/21/: README.md
puzzles/2021/22/: README.md
puzzles/2021/23/: README.md
puzzles/2021/24/: README.md
puzzles/2021/25/: README.md
puzzles/2021/3/: README.md
puzzles/2021/4/: README.md
puzzles/2021/5/: README.md
puzzles/2021/6/: README.md
puzzles/2021/7/: README.md
puzzles/2021/8/: README.md
puzzles/2021/9/: README.md
puzzles/2022/: CMakeLists.txt
puzzles/2022/01/: CMakeLists.txt  CmakeLists.txt
puzzles/2022/02/: CMakeLists.txt
puzzles/2022/1/: CMakeLists.txt  EXPLANATION.md  README.md
puzzles/2022/10/: README.md
puzzles/2022/11/: README.md
puzzles/2022/12/: README.md
puzzles/2022/13/: README.md
puzzles/2022/14/: README.md
puzzles/2022/15/: EXPLANATION.md  README.md
puzzles/2022/16/: EXPLANATION.md  README.md
puzzles/2022/17/: README.md
puzzles/2022/18/: README.md
puzzles/2022/19/: README.md
puzzles/2022/2/: EXPLANATION.md  README.md
puzzles/2022/20/: EXPLANATION.md  README.md
puzzles/2022/21/: README.md
puzzles/2022/22/: README.md
puzzles/2022/23/: README.md
puzzles/2022/24/: README.md
puzzles/2022/25/: README.md
puzzles/2022/3/: EXPLANATION.md  README.md
puzzles/2022/4/: CMakeLists.txt  README.md
puzzles/2022/5/: README.md
puzzles/2022/6/: README.md
puzzles/2022/7/: README.md
puzzles/2022/8/: README.md
puzzles/2022/9/: README.md
puzzles/2023/: CMakeLists.txt
puzzles/2023/1/: EXPLANATION.md  README.md
puzzles/2023/10/: EXPLANATION.md  README.md
puzzles/2023/11/: EXPLANATION.md  README.md
puzzles/2023/12/: EXPLANATION.md  README.md
puzzles/2023/13/: EXPLANATION.md  README.md
puzzles/2023/14/: EXPLANATION.md  README.md
puzzles/2023/15/: EXPLANATION.md  README.md
puzzles/2023/16/: EXPLANATION.md  README.md
puzzles/2023/17/: EXPLANATION.md  README.md
puzzles/2023/18/: CMakeLists.txt  EXPLANATION.md  README.md
puzzles/2023/19/: EXPLANATION.md  README.md
puzzles/2023/2/: EXPLANATION.md  README.md
puzzles/2023/20/: EXPLANATION.md  README.md
puzzles/2023/21/: EXPLANATION.md  README.md
puzzles/2023/3/: EXPLANATION.md  README.md
puzzles/2023/4/: CMakeLists.txt  EXPLANATION.md  README.md
puzzles/2023/5/: EXPLANATION.md  README.md
puzzles/2023/6/: EXPLANATION.md  README.md
puzzles/2023/7/: EXPLANATION.md  README.md
puzzles/2023/8/: EXPLANATION.md  README.md
puzzles/2023/9/: EXPLANATION.md  README.md
utils/: .clang-format  .clang-tidy  CMakeLists.txt
utils/include/utils/: Algorithms.hpp  AoC.hpp  AocUtils.hpp  CircularList.hpp  Combinations.hpp  Concepts.hpp  Container.hpp  ContainerUtils.hpp  DynamicProgramming.hpp  File.hpp  FileUtils.hpp  Hash.hpp  InputUtils.hpp  IntegerMath.hpp  Interval.hpp  IntervalSet.hpp  ListExtensions.hpp  Math.hpp  MultiInterval.hpp  OutputUtils.hpp  String.hpp  StringUtils.hpp  Time.hpp  TimeUtils.hpp
utils/src/: AoC.cpp  AocUtils.cpp  ContainerUtils.cpp  DynamicProgramming.cpp  File.cpp  FileUtils.cpp  InputUtils.cpp  Interval.cpp  MultiInterval.cpp  OutputUtils.cpp  String.cpp  StringUtils.cpp  Time.cpp  TimeUtils.cpp
utils/src/geometry2d/: BoundingBox2D.cpp  Operations2D.cpp  Point2D.cpp  Position2D.cpp  Rectangle2D.cpp  SquareDiamond2D.cpp  Vector2D.cpp
utils/tests/: AlgorithmsTests.cpp  CMakeLists.txt  CircularListTests.cpp  CombinationsTests.cpp  ConceptsTests.cpp  DirectionTests.cpp  DynamicProgrammingTests.cpp  FileTests.cpp  IntegerMathTests.cpp  IntervalSetTests.cpp  IntervalTests.cpp  ListExtensionsTests.cpp  MathTests.cpp  MultiIntervalTests.cpp  Point2DTests.cpp  Position2DTests.cpp  StringTests.cpp  StringUtilsTests.cpp
utils/tests/algorithms/: ClampedCountIfTests.cpp  SteppedIotaTests.cpp
utils/tests/cache/: InfiniteCacheTests.cpp  LRUCacheTests.cpp  LoopCacheTests.cpp  MemoizationTests.cpp
utils/tests/extensions/: ContainerExtensionsTests.cpp
utils/tests/geometry2d/: BoundingBox2DTests.cpp  Calculations2DTests.cpp  Coord2DTests.cpp  Coordinate2DTests.cpp  Direction2DTests.cpp  Grid2DTests.cpp  Line2DTests.cpp  Operations2DTests.cpp  OrthogonalLine2DTests.cpp  OrthogonalPolygon2DTests.cpp  Point2DTests.cpp  Polygon2DTests.cpp  Rectangle2DTests.cpp  SquareDiamond2DTests.cpp  Vector2DTests.cpp
utils/tests/geometry3d/: Operations3D.cpp  Operations3DTests.cpp  Point3DTests.cpp  Vector3DTests.cpp
utils/tests/graph/: AlgorithmsTests.cpp  GraphTests.cpp  VertexTests.cpp
utils/tests/interval/: IntervalSetTests.cpp  IntervalTests.cpp
utils/tests/test_assets/: CMakeLists.txt  FileWithGroupedNumbers.txt  FileWithTextLines.txt
(+702 files in other folders)
