cmake_minimum_required(VERSION 3.22)

if(GENERATE_YEARS STREQUAL "" OR "2021" IN_LIST GENERATE_YEARS)
  add_subdirectory(2021)
endif()
if(GENERATE_YEARS STREQUAL "" OR "2022" IN_LIST GENERATE_YEARS)
  add_subdirectory(2022)
endif()
if(GENERATE_YEARS STREQUAL "" OR "2023" IN_LIST GENERATE_YEARS)
  add_subdirectory(2023)
endif()
